Made example subscription list work

--- a/index.html
+++ b/index.html
@@ -1,119 +1,72 @@
 <!DOCTYPE html>
 <html>
-<title>The College Student's Guide to Privacy and Technology</title>
+<title>Subscription Scroller</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <body>
 
-<!-- Navbar (sit on top) -->
 <div class="w3-top">
   <div class="w3-bar w3-white w3-wide w3-padding w3-card">
-    <a href="#home" class="w3-bar-item w3-button">The College Student's Guide to <b>Privacy and Technology</b></a>
-    <!-- Float links to the right. Hide them on small screens -->
-    <div class="w3-right w3-hide-small">
-      <a href="#topics" class="w3-bar-item w3-button">Topics</a>
-      <a href="#about" class="w3-bar-item w3-button">About</a>
-      <a href="#contact" class="w3-bar-item w3-button">Contact</a>
-    </div>
+    <a href="index.html" class="w3-bar-item w3-button">Subscription Scroller</b></a>
   </div>
 </div>
 
-<!-- Header -->
-<header class="w3-display-container w3-content w3-wide" style="max-width:1500px;" id="home">
-  <img class="w3-image" src="images/privacy_cover.jpeg" alt="Computer" width="1500" style="filter: brightness(65%)">
-  <div class="w3-display-middle w3-margin-top w3-center">
-    <h1 class="w3-xxlarge w3-text-white"> <span class="w3-hide-small w3-text-light-grey">The College Student's Guide to <br>Privacy and Technology</span></h1>
-  </div>
-</header>
-
-<!-- Page content -->
 <div class="w3-content w3-padding" style="max-width:1564px">
 
-  <!-- Project Section -->
   <div class="w3-container w3-padding-32" id="topics">
-    <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">General Topics</h3>
+    <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">Subscription Feed</h3>
+  </div>
+
+  <a href="example.html">YouTube API Example</a>
+
+  <div class="w3-row-padding">
+    <div class="w3-col l3 m6 w3-margin-bottom">
+      <div class="w3-display-container">
+        <div class="w3-display-topleft w3-black w3-padding">Video 1</div>
+        <a href="https://www.youtube.com/watch?v=2My-iWGfIs0&ab_channel=veritones"><img src="grinch.jpeg" style="width:100%"></a>
+      </div>
+    </div>
+    <div class="w3-col l3 m6 w3-margin-bottom">
+      <div class="w3-display-container">
+        <div class="w3-display-topleft w3-black w3-padding">Video 1</div>
+        <a href="https://www.youtube.com/watch?v=2My-iWGfIs0&ab_channel=veritones"><img src="grinch.jpeg" style="width:100%"></a>
+      </div>
+    </div>
+    <div class="w3-col l3 m6 w3-margin-bottom">
+      <div class="w3-display-container">
+        <div class="w3-display-topleft w3-black w3-padding">Video 1</div>
+        <a href="https://www.youtube.com/watch?v=2My-iWGfIs0&ab_channel=veritones"><img src="grinch.jpeg" style="width:100%"></a>
+      </div>
+    </div>
   </div>
 
   <div class="w3-row-padding">
     <div class="w3-col l3 m6 w3-margin-bottom">
       <div class="w3-display-container">
-        <div class="w3-display-topleft w3-black w3-padding">iPhone Privacy Guide</div>
-        <a href="iphone_privacy.html"><img src="images/iphone_privacy.jpeg" alt="Person holding phone" style="width:100%"></a>
+        <div class="w3-display-topleft w3-black w3-padding">Video 1</div>
+        <a href="https://www.youtube.com/watch?v=2My-iWGfIs0&ab_channel=veritones"><img src="grinch.jpeg" style="width:100%"></a>
       </div>
     </div>
     <div class="w3-col l3 m6 w3-margin-bottom">
       <div class="w3-display-container">
-        <div class="w3-display-topleft w3-black w3-padding">Social Media Privacy Guide</div>
-        <a href="social_media_privacy.html"><img src="images/social_media.jpeg" alt="Social media cubes" style="width:100%">
+        <div class="w3-display-topleft w3-black w3-padding">Video 1</div>
+        <a href="https://www.youtube.com/watch?v=2My-iWGfIs0&ab_channel=veritones"><img src="grinch.jpeg" style="width:100%"></a>
       </div>
     </div>
     <div class="w3-col l3 m6 w3-margin-bottom">
       <div class="w3-display-container">
-        <div class="w3-display-topleft w3-black w3-padding">Education Tools Privacy Overview</div>
-        <a href="education.html"><img src="images/education.jpeg" alt="Student video calling" style="width:99%"></a>
-      </div>
-    </div>
-    <div class="w3-col l3 m6 w3-margin-bottom">
-      <div class="w3-display-container">
-        <div class="w3-display-topleft w3-black w3-padding">FERPA Overview</div>
-        <a href="ferpa.html"><img src="images/ferpa.jpeg" alt="Parents reviewing computer" style="width:100%">
-      </div>
-  </div>
-
-  <div class="w3-row-padding">
-    <div class="w3-col l3 m6 w3-margin-bottom">
-      <div class="w3-display-container">
-        <div class="w3-display-topleft w3-black w3-padding">Introduction to De-Anonymization</div>
-        <a href="deanonymization.html"><img src="images/anonymousdata.jpeg" alt="Blurred people" style="width:100%"></a>
-      </div>
-    </div>
-    <div class="w3-col l3 m6 w3-margin-bottom">
-      <div class="w3-display-container">
-        <div class="w3-display-topleft w3-black w3-padding">10 1-minute Actions</div>
-        <a href="tenthings.html"><img src="images/tenthings.jpeg" alt="Privacy glasses" style="width:99%"></a>
+        <div class="w3-display-topleft w3-black w3-padding">Video 1</div>
+        <a href="https://www.youtube.com/watch?v=2My-iWGfIs0&ab_channel=veritones"><img src="grinch.jpeg" style="width:100%"></a>
       </div>
     </div>
   </div>
 
-  <div class="w3-container w3-padding-32" id="topics">
-    <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">Harvard Specific Topics</h3>
-  </div>
-
-  <div class="w3-row-padding">
-    <div class="w3-col l3 m6 w3-margin-bottom">
-      <div class="w3-display-container">
-        <div class="w3-display-topleft w3-black w3-padding">Harvard's Access to Electronic Information Policy</div>
-        <a href="harvard_info_policy.html"><img src="images/infoaccessharvard.jpeg" alt="Digital security screen" style="width:100%"></a>
-      </div>
-    </div>
-    <div class="w3-col l3 m6 w3-margin-bottom">
-      <div class="w3-display-container">
-        <div class="w3-display-topleft w3-black w3-padding">Security Cameras at Harvard</div>
-        <a href="security_cameras.html"><img src="images/security_camera.jpeg" alt="Security camera" style="width:100%"></a>
-      </div>
-    </div>
-  </div>
-
-  <!-- About Section -->
-  <div class="w3-container w3-padding-32" id="about">
-    <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">About</h3>
-    <p>We're two Harvard undergraduates who were enrolled in CS105: Privacy and Technology. We wanted to share what we've learned from Professor Jim Waldo about how college students can better protect their individual privacy. In our increasingly digital age, it has become more and more difficult to parse out and understand what our individual rights to privacy are, and what data is within our control. This site is meant to help serve as a guide, especially for fellow college students facing some of the same challenges we did.
-    </p>
-  </div>
-
-  <!-- Contact Section -->
-  <div class="w3-container w3-padding-32" id="contact">
-    <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">Contact</h3>
-    <p>Questions or comments for the creators of this site? You can reach us by email at <a href="mailto:meilingthompson@college.harvard.edu">meilingthompson@college.harvard.edu</a> or <a href="mailto:michaelyin@college.harvard.edu">michaelyin@college.harvard.edu</a>!
-  </div>
-
-<!-- End page content -->
 </div>
 
-<!-- Footer -->
 <footer class="w3-center w3-black w3-padding-16">
-  <p>Created by Meiling Thompson and Michael Yin, Harvard College '22, for <a href="http://www.eecs.harvard.edu/~waldo/">Jim Waldo</a>'s CS 105: Privacy and Technology.</p>
+  <p>Created by Michael Yin, code available on <a href="https://github.com/MichaelYinGH/subscription-scroller">GitHub</a>.
+  Questions or suggestions? You can reach me by email at <a href="mailto:michaelyin2018@gmail.com">michaelyin2018@gmail.com</a>.</p>
 </footer>
 
 </body>
